@@ -1,21 +1,26 @@
 package com.catadmirer.infuseSMP.commands;
 
 import com.catadmirer.infuseSMP.Infuse;
-import com.catadmirer.infuseSMP.Messages;
+import com.catadmirer.infuseSMP.Message;
+import com.catadmirer.infuseSMP.MessageConfig;
+import com.catadmirer.infuseSMP.Message.MessageType;
+import com.catadmirer.infuseSMP.effects.InfuseEffect;
 import com.catadmirer.infuseSMP.inventories.EffectChooser;
+import com.catadmirer.infuseSMP.inventories.RecipeListGUI;
 import com.catadmirer.infuseSMP.managers.CooldownManager;
-import com.catadmirer.infuseSMP.managers.EffectMapping;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
+
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Stream;
+import org.jspecify.annotations.NonNull;
 
 public class InfuseCommand implements CommandExecutor, TabCompleter {
     private final Infuse plugin;
@@ -25,20 +30,24 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(@NonNull CommandSender sender, @NonNull Command command, @NonNull String label, String @NonNull [] args) {
         if (!(sender instanceof Player player)) {
             return true;
         }
 
         if (args.length == 0) {
-            player.sendMessage(Messages.INFUSE_INVALID_PARAM.toComponent());
+            player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
             return true;
         }
 
+        Player target;
+        String effectKey;
+        InfuseEffect effect;
+        Message msg;
         switch (args[0].toLowerCase()) {
             case "gui":
                 if (!player.isOp()) {
-                    player.sendMessage(Messages.ERROR_NOT_OP.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
 
@@ -47,150 +56,151 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
 
             case "reload":
                 if (!player.isOp()) {
-                    player.sendMessage(Messages.ERROR_NOT_OP.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
 
-                plugin.getConfigFile().load();
-                Messages.load(plugin);
+                plugin.getMainConfig().load();
+                MessageConfig.load(plugin);
+                plugin.getRecipeManager().reload();
                 player.sendMessage("Infuse configs reloaded");
                 break;
             case "recipes":
-                Recipes.openGUI(player);
+                player.openInventory(new RecipeListGUI().getInventory());
                 break;
             case "giveeffect":
                 if (!player.isOp()) {
-                    player.sendMessage(Messages.ERROR_NOT_OP.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
 
                 if (args.length != 3) {
-                    player.sendMessage(Messages.INFUSE_GIVEEFFECT_USAGE.toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_GIVEEFFECT_USAGE).toComponent());
                     return true;
                 }
 
-                Player target = Bukkit.getPlayer(args[1]);
+                target = Bukkit.getPlayer(args[1]);
                 if (target == null || !target.isOnline()) {
-                    player.sendMessage(Messages.ERROR_TARGET_NOT_FOUND.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
                     return true;
                 }
 
-                String effectKey = args[2].toLowerCase();
-                EffectMapping mapping = EffectMapping.fromEffectKey(effectKey);
-                if (mapping == null) {
-                    player.sendMessage(Messages.INFUSE_INVALID_PARAM.toComponent());
+                effectKey = args[2].toLowerCase();
+                effect = InfuseEffect.fromString(effectKey);
+                if (effect == null) {
+                    player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
                     return true;
                 }
 
-                target.getInventory().addItem(mapping.createItem());
+                target.getInventory().addItem(effect.createItem());
 
-                String msg = Messages.INFUSE_GIVEEFFECT_SUCCESS.getMessage();
-                msg = msg.replace("%effect_color%", "<#" + Integer.toHexString(mapping.getColor().getRGB() & 0xffffff) + ">");
-                msg = msg.replace("%effect_name%", mapping.getName());
-                target.sendMessage(Messages.toComponent(msg));
+                msg = new Message(MessageType.INFUSE_GIVEEFFECT_SUCCESS);
+                msg.applyPlaceholder("effect_color", "<#" + Integer.toHexString(effect.getPotionColor().getRGB() & 0xffffff) + ">");
+                msg.applyPlaceholder("effect_name", effect.getName());
+                target.sendMessage(msg.toComponent());
                 break;
             case "seteffect":
                 if (!player.isOp()) {
-                    player.sendMessage(Messages.ERROR_NOT_OP.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
                 
                 if (args.length != 4) {
-                    player.sendMessage(Messages.INFUSE_SETEFFECT_USAGE.toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_SETEFFECT_USAGE).toComponent());
                     return true;
                 }
                 
                 // Getting the player and making sure they are online.
                 target = Bukkit.getPlayer(args[1]);
                 if (target == null || !target.isOnline()) {
-                    player.sendMessage(Messages.ERROR_TARGET_NOT_FOUND.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
                     return true;
                 }
                 
                 // Getting the effect key and verifying its integrity.
                 effectKey = args[2].toLowerCase();
-                mapping = EffectMapping.fromEffectKey(effectKey);
-                if (mapping == null) {
-                    player.sendMessage(Messages.INFUSE_INVALID_PARAM.toComponent());
+                effect = InfuseEffect.fromString(effectKey);
+                if (effect == null) {
+                    player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
                     return true;
                 }
                 
                 // Getting the slot to put the effect into and validating it.
                 String slot = args[3];
                 if (!slot.equals("1") && !slot.equals("2")) {
-                    msg = Messages.INFUSE_INVALID_SLOT.getMessage();
-                    msg = msg.replace("%slot%", slot);
-                    player.sendMessage(Messages.toComponent(msg));
+                    msg = new Message(MessageType.INFUSE_INVALID_SLOT);
+                    msg.applyPlaceholder("slot", slot);
+                    player.sendMessage(msg.toComponent());
                     return true;
                 }
 
                 // Setting the effect
-                plugin.getDataManager().setEffect(target.getUniqueId(), args[3], mapping);
-                msg = Messages.INFUSE_SETEFFECT_SUCCESS.getMessage();
-                msg = msg.replace("%slot%", slot);
-                msg = msg.replace("%player_name%", target.getName());
-                msg = msg.replace("%effect_name%", mapping.getName());
-                player.sendMessage(Messages.toComponent(msg));
+                plugin.getDataManager().setEffect(target.getUniqueId(), args[3], effect);
+                msg = new Message(MessageType.INFUSE_SETEFFECT_SUCCESS);
+                msg.applyPlaceholder("slot", slot);
+                msg.applyPlaceholder("player_name", target.getName());
+                msg.applyPlaceholder("effect_name", effect.getName());
+                player.sendMessage(msg.toComponent());
                 break;
-            case "cleareffect":
+            case "cleareffects":
                 if (!player.isOp()) {
-                    player.sendMessage(Messages.ERROR_NOT_OP.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
 
                 if (args.length != 2) {
-                    player.sendMessage(Messages.INFUSE_CLEAREFFECT_USAGE.toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_CLEAREFFECTS_USAGE).toComponent());
                     return true;
                 }
 
                 // Getting the player and making sure they are online
                 target = Bukkit.getPlayer(args[1]);
                 if (target == null || !target.isOnline()) {
-                    player.sendMessage(Messages.ERROR_TARGET_NOT_FOUND.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
                     return true;
                 }
 
                 // Removing the effects from the player
                 plugin.getDataManager().removeEffect(target.getUniqueId(), "1");
                 plugin.getDataManager().removeEffect(target.getUniqueId(), "2");
-                msg = Messages.INFUSE_CLEAREFFECT_SUCCESS.getMessage();
-                msg = msg.replace("%player_name%", target.getName());
-                player.sendMessage(Messages.toComponent(msg));
+                msg = new Message(MessageType.INFUSE_CLEAREFFECTS_SUCCESS);
+                msg.applyPlaceholder("player_name", target.getName());
+                player.sendMessage(msg.toComponent());
                 break;
             case "cooldown":
                 if (!player.isOp()) {
-                    player.sendMessage(Messages.ERROR_NOT_OP.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
 
                 if (args.length != 2) {
-                    player.sendMessage(Messages.INFUSE_COOLDOWN_USAGE.toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_COOLDOWN_USAGE).toComponent());
                     return true;
                 }
                 
                 // Getting the player and making sure they are online
                 target = Bukkit.getPlayer(args[1]);
                 if (target == null || !target.isOnline()) {
-                    player.sendMessage(Messages.ERROR_TARGET_NOT_FOUND.toComponent());
+                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
                     return true;
                 }
 
                 // Removing cooldowns from the player
                 CooldownManager.removeAllCooldowns(target.getUniqueId());
-                msg = Messages.INFUSE_COOLDOWN_SUCCESS.getMessage();
-                msg = msg.replace("%player_name%", target.getName());
-                player.sendMessage(Messages.toComponent(msg));
+                msg = new Message(MessageType.INFUSE_COOLDOWN_SUCCESS);
+                msg.applyPlaceholder("player_name", target.getName());
+                player.sendMessage(msg.toComponent());
                 break;
             case "controls":
                 if (args.length != 2) {
-                    player.sendMessage(Messages.INFUSE_CONTROLS_USAGE.toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_CONTROLS_USAGE).toComponent());
                     return true;
                 }
 
                 // Getting the control mode and validating the input.
                 String choice = args[1].toLowerCase();
                 if (!choice.equals("offhand") && !choice.equals("command")) {
-                    player.sendMessage(Messages.INFUSE_CONTROLS_USAGE.toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_CONTROLS_USAGE).toComponent());
                     return true;
                 }
 
@@ -201,12 +211,12 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                 boolean offhandEnabled = choice.equalsIgnoreCase("offhand");
                 player.addAttachment(plugin, "ability.use", !offhandEnabled);
 
-                msg = Messages.INFUSE_CONTROLS_SUCCESS.getMessage();
-                msg = msg.replace("%controlMode%", choice);
-                player.sendMessage(Messages.toComponent(msg));
+                msg = new Message(MessageType.INFUSE_CONTROLS_SUCCESS);
+                msg.applyPlaceholder("controlMode", choice);
+                player.sendMessage(msg.toComponent());
                 break;
             default:
-                sender.sendMessage(Messages.INFUSE_INVALID_PARAM.toComponent());
+                sender.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
                 break;
         }
 
@@ -215,12 +225,12 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
 
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NonNull CommandSender sender, @NonNull Command command, @NonNull String alias, String[] args) {
         if (args.length == 1) {
             List<String> completions = new ArrayList<>(Arrays.asList("recipes", "controls"));
             
             if (sender.isOp()) {
-                completions.addAll(Arrays.asList("gui", "reload", "giveEffect", "setEffect", "clearEffect", "cooldown"));
+                completions.addAll(Arrays.asList("gui", "reload", "giveEffect", "setEffect", "clearEffects", "cooldown"));
             }
 
             return completions.stream().filter(s -> s.toLowerCase().startsWith(args[0].toLowerCase())).sorted().toList();
@@ -232,19 +242,19 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                     return Stream.of("offhand", "command").filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
                 case "giveeffect":
                 case "seteffect":
-                case "cleareffect":
+                case "cleareffects":
                 case "cooldown":
-                    if (!sender.isOp()) return Arrays.asList();
-                    return Bukkit.getOnlinePlayers().stream().map(p -> p.getName()).filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
+                    if (!sender.isOp()) return List.of();
+                    return Bukkit.getOnlinePlayers().stream().map(Player::getName).filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
             }
         }
         
         if (args.length == 3) {
             switch(args[0].toLowerCase()) {
-                case "giveEffect":
-                case "setEffect":
-                    if (!sender.isOp()) return Arrays.asList();
-                    return Stream.of(EffectMapping.values()).map(EffectMapping::getKey).filter(key -> key.toLowerCase().startsWith(args[2].toLowerCase())).toList();
+                case "giveeffect":
+                case "seteffect":
+                    if (!sender.isOp()) return List.of();
+                    return InfuseEffect.getRegisteredEffects().values().stream().map(InfuseEffect::toString).filter(key -> key.toLowerCase().startsWith(args[2].toLowerCase())).toList();
             }
         }
         
